<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Line     : bullbee117
 * Phone    : 081357108568
 * Majors   : D3 Teknik Informatika 2016
 * Campus   : Telkom University
 * 
 * id.amirisback.frogobox
 * 
 -->

<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/small"
        android:layout_height="wrap_content">

    <LinearLayout
            android:paddingTop="@dimen/mini"
            android:paddingBottom="@dimen/mini"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@id/textview_match_list_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textOrange"
                tools:text="@string/date" />

        <TextView
                android:id="@id/textview_match_list_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textColor="@color/textOrange"
                tools:text="Time" />

        <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@id/textview_match_list_home_team"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBlack"
                    tools:text="@string/home_text"
                    android:gravity="end"/>

            <TextView
                    android:id="@id/textview_match_list_home_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBlack"
                    android:textSize="@dimen/scoreTextSize"
                    android:textStyle="bold"

                    android:layout_marginLeft="@dimen/primary"
                    android:layout_marginRight="@dimen/primary"
                    tools:text="@string/home_score" />

            <TextView
                    android:id="@id/textview_match_list_vs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vs_match"
                    android:textColor="@color/textBlack"/>

            <TextView
                    android:id="@id/textview_match_list_away_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBlack"
                    android:textSize="@dimen/scoreTextSize"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/primary"
                    android:layout_marginRight="@dimen/primary"
                    tools:text="@string/away_score" />

            <TextView
                    android:id="@id/textview_match_list_away_team"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBlack"
                    tools:text="@string/away_text" />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>