<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.activities.DetailMatchActivity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <ScrollView
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:id="@id/layout_detail_match_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/primary">

                <TextView
                        android:id="@id/textview_detail_match_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        tools:text="@string/date"
                        android:textSize="@dimen/titleTextItem"
                        android:textColor="@color/textOrange"/>

                <TextView
                        android:id="@id/textview_detail_match_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        tools:text="Time"
                        android:layout_marginTop="@dimen/small"
                        android:textSize="@dimen/titleTextItem"
                        android:textColor="@color/textOrange"
                        android:layout_below="@id/textview_detail_match_date"/>

                <RelativeLayout
                        android:id="@+id/containerItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/primary"
                        android:layout_marginBottom="@dimen/primary"
                        android:layout_below="@id/textview_detail_match_time">

                    <TextView
                            android:id="@id/textview_detail_match_vs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vs_match"
                            android:layout_centerInParent="true"/>

                    <TextView
                            android:id="@+id/textview_detail_match_away_score"
                            style="@style/DetailTextScore"
                            tools:text="@string/away_score"
                            android:layout_toRightOf="@id/textview_detail_match_vs"/>

                    <TextView
                            android:id="@+id/textview_detail_match_home_score"
                            tools:text="@string/home_score"
                            style="@style/DetailTextScore"
                            android:layout_toLeftOf="@id/textview_detail_match_vs"/>

                    <LinearLayout
                            android:layout_toLeftOf="@id/textview_detail_match_home_score"
                            android:orientation="vertical"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:gravity="center">


                        <ImageView
                                android:id="@id/textview_detail_match_home_image"
                                android:layout_width="match_parent"
                                android:layout_height="110dp"
                                tools:srcCompat="@tools:sample/avatars" />

                        <TextView
                                android:id="@id/textview_detail_match_home_team"
                                style="@style/DetailTextTeamName"
                                tools:text="@string/home_text" />

                        <TextView
                                android:id="@id/textview_detail_match_home_formation"
                                style="@style/DetailTextTeamFormation"
                                tools:text="@string/detail_formation"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_toRightOf="@id/textview_detail_match_away_score"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content">

                        <ImageView
                                android:id="@id/textview_detail_match_away_image"
                                android:layout_width="match_parent"
                                android:layout_height="110dp"
                                tools:srcCompat="@tools:sample/avatars" />

                        <TextView
                                android:id="@id/textview_detail_match_away_team"
                                tools:text="@string/away_text"
                                style="@style/DetailTextTeamName"/>

                        <TextView
                                android:id="@id/textview_detail_match_away_formation"
                                style="@style/DetailTextTeamFormation"
                                tools:text="@string/detail_formation"/>

                    </LinearLayout>

                </RelativeLayout>

                <View
                        android:id="@+id/viewLine"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line"
                        android:layout_below="@id/containerItems"/>

                <LinearLayout
                        android:id="@+id/containerGoals"
                        style="@style/DetailLayoutContainerTextItem"
                        android:layout_below="@id/viewLine">

                    <TextView
                            android:id="@id/textview_detail_match_home_goals"
                            style="@style/DetailHomeTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_goals"
                            android:text="@string/detail_goals"
                            style="@style/DetailTitleTextItem" />

                    <TextView
                            android:id="@id/textview_detail_match_away_goals"
                            style="@style/DetailAwayTextItem" />

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/containerShots"
                        style="@style/DetailLayoutContainerTextItem"
                        android:layout_below="@id/containerGoals">

                    <TextView
                            android:id="@id/textview_detail_match_home_shots"
                            style="@style/DetailHomeTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_shots"
                            android:text="@string/detail_shots"
                            style="@style/DetailTitleTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_away_shots"
                            style="@style/DetailAwayTextItem"/>

                </LinearLayout>

                <View
                        android:id="@+id/viewLines"
                        android:layout_marginTop="@dimen/small"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line"
                        android:layout_below="@id/containerShots"/>

                <TextView
                        android:id="@id/textview_detail_match_lineup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_lineup"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/small"
                        android:layout_below="@id/viewLines"
                        android:textSize="@dimen/titleTextItem"
                        android:textColor="@color/textBlack"/>

                <LinearLayout
                        android:id="@+id/containerGoalKeeper"
                        style="@style/DetailLayoutContainerTextItem"
                        android:layout_below="@id/textview_detail_match_lineup">

                    <TextView
                            android:id="@id/textview_detail_match_home_goalkeeper"
                            style="@style/DetailHomeTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_goalkeeper"
                            android:text="@string/detail_goalkeeper"
                            style="@style/DetailTitleTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_away_goalkeeper"
                            style="@style/DetailAwayTextItem"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/containerDefense"
                        style="@style/DetailLayoutContainerTextItem"
                        android:layout_below="@id/containerGoalKeeper">

                    <TextView
                            android:id="@id/textview_detail_match_home_defense"
                            style="@style/DetailHomeTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_defense"
                            android:text="@string/detail_defense"
                            style="@style/DetailTitleTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_away_defense"
                            style="@style/DetailAwayTextItem"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/containerMildfield"
                        style="@style/DetailLayoutContainerTextItem"
                        android:layout_below="@id/containerDefense">

                    <TextView
                            android:id="@id/textview_detail_match_home_midfield"
                            style="@style/DetailHomeTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_midfield"

                            android:text="@string/detail_midfield"
                            style="@style/DetailTitleTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_away_midfield"
                            style="@style/DetailAwayTextItem"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/containerForward"
                        style="@style/DetailLayoutContainerTextItem"
                        android:layout_below="@id/containerMildfield">

                    <TextView
                            android:id="@id/textview_detail_match_home_forward"
                            style="@style/DetailHomeTextItem" />

                    <TextView
                            android:id="@id/textview_detail_match_forward"
                            android:text="@string/detail_forward"
                            style="@style/DetailTitleTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_away_substitute"
                            style="@style/DetailAwayTextItem"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/containerSubtitutes"
                        style="@style/DetailLayoutContainerTextItem"
                        android:layout_below="@id/containerForward">

                    <TextView
                            android:id="@id/textview_detail_match_home_substitute"
                            style="@style/DetailHomeTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_substitute"
                            android:text="@string/detail_substitutes"
                            style="@style/DetailTitleTextItem"/>

                    <TextView
                            android:id="@id/textview_detail_match_away_forward"
                            style="@style/DetailAwayTextItem"/>

                </LinearLayout>

            </RelativeLayout>

            <ProgressBar
                    android:id="@+id/progressBarDetail"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

        </RelativeLayout>

    </ScrollView>



</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>