<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.DetailPlayerActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@id/imageview_detail_player_poster"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                tools:src="@mipmap/ic_launcher"
                android:scaleType="fitXY"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <LinearLayout
                    android:layout_marginTop="@dimen/primary"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_player_weight"/>

                    <TextView
                            android:id="@id/textview_detail_player_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:text="65.65"/>
                </LinearLayout>


                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_player_height"/>

                    <TextView
                            android:id="@id/textview_detail_player_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:text="1.80"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                    android:id="@id/textview_detail_player_position"
                    android:layout_marginTop="@dimen/small"
                    android:text="@string/favorite"
                    android:textAlignment="center"
                    android:textSize="@dimen/textSizeBadge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/line"/>

            <TextView
                    android:id="@id/textview_detail_player_desc"
                    android:layout_margin="@dimen/small"
                    android:text="@string/favorite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>



